--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.0.3",
     "firebase": "^9.22.0",
     "framer-motion": "^10.12.12",
+    "maath": "^0.5.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-circular-progressbar": "^2.1.0",
