--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-circular-progressbar": "^2.1.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
     "react-simple-maps": "^3.0.0",
